--- a/doc/导入导出与数据同步.md
+++ b/doc/导入导出与数据同步.md
@@ -68,7 +68,10 @@
 - 待处理同步统计
 - 错误和警告报告
 
-## 4. 技术实现细节
+## 4. 离线协同高级方案 (.eap)
+关于面向小组成员的、基于 AirDrop 的趣味化离线同步设计，请参考：[离线数据同步与协作方案](./OFFLINE_SYNC_DESIGN.md)。
+
+## 5. 技术实现细节
 
 ### 4.1 文件处理
 - 使用Papa Parse处理CSV文件
